--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.2.1",
-    "express-fileupload": "^1.5.2"
+    "express-fileupload": "^1.5.2",
+    "pg": "^8.17.2"
   }
 }
